# engineer_arm

./: .gitignore  MIGRATE_MINIPC.md  README.md  README_real_robot.md
scripts/: dm_can_keepalive.py  dm_can_keepalive_bus.py  dm_can_position_control.py  dm_can_velocity_control.py  migrate_to_minipc.sh  start_commander.sh  start_real_robot.sh  watch_j56.sh  watch_j6.sh
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/meshes/: Link_1.STL  Link_2.STL  base_link.STL
src/arm_description/urdf/: arm.ros2_control.xacro  arm.xacro
src/arm_hardware_interface/: CMakeLists.txt  arm_hardware_interface.xml  package.xml
src/arm_hardware_interface/include/arm_hardware_interface/: arm_hardware_interface.hpp  socket_can.hpp
src/arm_hardware_interface/include/arm_hardware_interface/motor_drivers/: dji_motor.hpp  dm_motor.hpp  motor_base.hpp
src/arm_hardware_interface/src/: arm_hardware_interface.cpp
src/chassis_description/: CMakeLists.txt  package.xml
src/chassis_description/meshes/: left.STL  right.STL
src/chassis_description/urdf/: chassis.xacro
src/gripper_description/: CMakeLists.txt  package.xml
src/gripper_description/launch/: display.launch.py
src/gripper_description/meshes/: grippeer_Link.STL  left_finger_Link.STL  right_finger_Link.STL
src/gripper_description/urdf/: gripper.urdf  gripper.xacro
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: arm_controllers.yaml  rviz_config.rviz
src/my_robot_bringup/launch/: arm_bringup.launch.py  robot.launch.py  view_robot.launch.py
src/my_robot_commander_cpp/: CMakeLists.txt  package.xml
src/my_robot_commander_cpp/launch/: commander.launch.py
src/my_robot_commander_cpp/src/: commander_template.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: rviz_description.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  ros2_controllers.yaml  servo_params.yaml
